--- a/views/posts/createPostPage.ejs
+++ b/views/posts/createPostPage.ejs
@@ -14,6 +14,26 @@
     
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://kit.fontawesome.com/880802bab5.js" crossorigin="anonymous"></script>
+
+    <!-- Commit 버튼 style -->
+    <style>
+     /* #hoverButton::after {
+            content: 'Commit';
+        }
+        #hoverButton:hover::after {
+            content: 'msg';
+        }
+        #hoverButton {
+            position: relative;
+            display: inline-block;
+        }
+        #hoverButton::after {
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
+        } */
+  </style>
   </head>
 <body>
   <div class="px-5 m-5">
@@ -35,17 +55,21 @@
       <div id="editor"></div>
     </div>
     <!-- Footer -->
-      <div class=" bottom-0 bg-white rounded-lg shadow-xl shadow-top-only ">
-        <div class="mx-auto max-w-screen-xl  p-4 ">
+      <div class=" bottom-0 bg-white rounded-lg  ">
+        <div class="mx-auto  p-4 ">
           <div class="flex items-center justify-between text-sm font-medium text-gray-500 dark:text-gray-400 sm:mt-0">
-            <div class=" left-0 mx-5">
+            <div class="mx-5">
               <button class="ml-3 rounded-lg px-5 py-2.5 me-2 mb-2  focus:outline-none  hover:bg-gray-100">
                   <i class="fa-solid fa-arrow-left" class="hover:underline ml-5 text-lg  me-4 md:me-6"></i>
-                  <a href="/" class="">Home</a>
+                  <a href="/" class="">Home</a>
               </button>
             </div>
-            <div class=" right-0 mx-5">
-              <button onclick="stashPost()" type="button" class="text-sky-500 hover:bg-gray-100 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2  focus:outline-none">Commit</button>
+            <div class="mx-5">
+              <button onclick="stashPost()" id="hoverButton" type="button" 
+              onmouseover="changeTextOnHover()" 
+              onmouseout="revertTextOnHoverOut()"
+              class="hover-text-change text-sky-500 hover:shadow-sm font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 focus:outline-none">
+              Commit</button>
               <button onclick="insertPost()" type="button" class="text-white bg-sky-500 hover:bg-sky-600 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-blue-300 dark:hover:bg-blue-700 focus:outline-none">Push</button>
             </div>
           </div>
@@ -183,6 +207,17 @@
 
     //   // 페이지 로드 시 체크
     //   window.onload = reloadOnWidthChange;
+
+
+    function changeTextOnHover() {
+            const button = document.getElementById('hoverButton');
+            button.innerText = 'Message';
+        }
+
+        function revertTextOnHoverOut() {
+            const button = document.getElementById('hoverButton');
+            button.innerText = 'Commit';
+        }
   </script>
 </body>
 </html>
