Feat: session 연결

--- a/views/posts/createPostPage.ejs
+++ b/views/posts/createPostPage.ejs
@@ -128,7 +128,7 @@
       console.log(editor.getHTML());
       console.log(postTitle);
       
-      const userId = 1;
+      // const userId = 1;
       // req.body : {postTitle, postContent},
       // userId → 세션에서 가져오기
       try {
@@ -138,7 +138,6 @@
             data: {
               postTitle,
               postContent,
-              userId,
             },
           });
 
