--- a/views/user/loginPage.ejs
+++ b/views/user/loginPage.ejs
@@ -28,7 +28,10 @@
       >
         <div class="loginWrapper w-[500px] p-[30px] flex flex-col items-center">
           <a href="/"
-            ><img src="/image/logoImage.png" alt="logoImage" width="100px"
+            ><img
+              src="/static/image/logoImage.png"
+              alt="logoImage"
+              width="100px"
           /></a>
           <hr class="w-[100%] mb-[20px] border-none h-[1px] bg-mainColor" />
           <form
