Feat: 최종 확인 완료 및 필요없는 코드 삭제(게시물 수정 제외)

--- a/views/include/header.ejs
+++ b/views/include/header.ejs
@@ -44,13 +44,8 @@
         <img
           id="profileImage"
           class="w-8 h-8 md:w-14 md:h-14 rounded-full"
-          src="<%= sessionUser.profileImg ? '/uploads/' + sessionUser.profileImg : '/uploads/profile.jpg' %>"
+          src="<%= sessionUser.profileImg ? '/uploads/' + sessionUser.profileImg : '/uploads/user.png' %>"
         />
-        <!-- <img
-          id="profileImage"
-          class="w-8 h-8 md:w-14 md:h-14 rounded-full"
-          src="/uploads/profile.jpg"
-        /> -->
         <svg
           class="w-2.5 h-2.5 ms-3 dark:text-white"
           aria-hidden="true"
