--- a/views/search/searchPage.ejs
+++ b/views/search/searchPage.ejs
@@ -10,6 +10,14 @@
     ></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <%- include('../include/head.ejs') %>
+    <style>
+      /* 다크 모드 스타일 */
+      @media (prefers-color-scheme: dark) {
+        button:active {
+          border: 2px, white;
+        }
+      }
+    </style>
   </head>
 
   <body class="dark:bg-neutral-900 font-sans">
@@ -42,13 +50,13 @@
         <input
           type="search"
           id="default-search"
-          class="searchText block w-full h-16 p-4 ps-10 text-lg text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:outline-blue-300 focus:ring-blue-500 focus:border-none dark:bg-neutral-800 dark:focus:outline dark:focus:outline-1 dark:focus:outline-neutral-400 dark:border-gray-600 dark:placeholder-neutral-400 dark:text-neutral-400"
+          class="searchText block w-full h-16 p-4 ps-10 text-lg text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:outline-blue-300 focus:border-none dark:bg-neutral-800 dark:focus:outline dark:focus:outline-1 dark:focus:outline-neutral-400 dark:border-gray-600 dark:placeholder-neutral-400 dark:text-neutral-400"
           name="postTitle"
           placeholder="검색어를 입력해주세요"
           required
         />
         <button
-          class="text-white h-11 absolute end-2.5 bottom-2.5 bg-mainColor hover:bg-[#0d4a9b] active:ring-4 acitve:outline-none active:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2"
+          class="text-white h-11 absolute end-2.5 bottom-2.5 bg-mainColor hover:bg-[#0d4a9b] active:ring-4 active:ring-blue-300 dark:active:ring-4 dark:active:ring-neutral-400 font-medium rounded-lg text-sm px-4 py-2"
           onclick="searchForm()"
         >
           검색
