--- a/views/search/searchPage.ejs
+++ b/views/search/searchPage.ejs
@@ -11,11 +11,11 @@
     <%- include('../include/head.ejs') %>
   </head>
 
-  <body>
+  <body class="font-sans">
     <div class="max-w-3xl mx-auto mt-24">
       <label
         for="default-search"
-        class="mb-2 text-sm font-medium text-gray-900 sr-only dark:text-white"
+        class="mb-2 text-sm font-medium text-gray-900 sr-only"
         >Search</label
       >
       <div class="relative">
@@ -23,7 +23,7 @@
           class="absolute inset-y-0 start-0 flex items-center ps-3 pointer-events-none"
         >
           <svg
-            class="w-4 h-4 text-gray-500 dark:text-gray-400"
+            class="w-4 h-4 text-gray-500"
             aria-hidden="true"
             xmlns="http://www.w3.org/2000/svg"
             fill="none"
@@ -41,13 +41,13 @@
         <input
           type="search"
           id="default-search"
-          class="searchText block w-full p-4 ps-10 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:outline-blue-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+          class="searchText block w-full h-16 p-4 ps-10 text-lg text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:outline-blue-300 focus:border-none"
           name="postTitle"
           placeholder="검색어를 입력해주세요"
           required
         />
         <button
-          class="text-white absolute end-2.5 bottom-2.5 bg-blue-700 hover:bg-blue-800 active:ring-4 acitve:outline-none active:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 dark:bg-blue-600 dark:hover:bg-blue-700 dark:active:ring-blue-800"
+          class="text-white h-11 absolute end-2.5 bottom-2.5 bg-mainColor hover:bg-[#0d4a9b] active:ring-4 active:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2"
           onclick="searchForm()"
         >
           검색
