Feat: 로그인 실패시 alert

--- a/views/user/loginPage.ejs
+++ b/views/user/loginPage.ejs
@@ -51,9 +51,13 @@
           } else {
             document.getElementById('errorMessage').textContent =
               '아이디 또는 비밀번호를 다시 확인해주세요';
+            alert('아이디 또는 비밀번호를 다시 확인해주세요');
           }
         } catch (error) {
           console.log('로그인 중 error 발생', error);
+          document.getElementById('errorMessage').textContent =
+              '아이디 또는 비밀번호를 다시 확인해주세요';
+            alert('아이디 또는 비밀번호를 다시 확인해주세요');
         }
       }
     </script>
