--- a/views/include/footer.ejs
+++ b/views/include/footer.ejs
@@ -1,9 +1,13 @@
 <div>
   <footer class="bg-white rounded-lg shadow m-4 dark:bg-gray-800">
-    <div class="w-full mx-auto max-w-screen-xl p-4 md:flex md:items-center md:justify-between">
-      <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">© 2023
-        <a href="https://flowbite.com/" class="hover:underline">Flowbite™</a>. All Rights Reserved.
-      </span>
+    <div class="w-full mx-auto max-w-screen-xl p-4 md:flex md:items-center justify-around">
+      <div class="text-sm text-gray-500 sm:text-center"> 2024
+        <a class="hover:underline">Design by Blomit</a>
+      </div>
+      <div class="text-sm text-gray-500 sm:text-center">Terms</div>
+      <div class="text-sm text-gray-500 sm:text-center">Privacy</div>
+      <div class="text-sm text-gray-500 sm:text-center">Security</div>
+      <div class="text-sm text-gray-500 sm:text-center">Docs</div>
       <ul class="flex flex-wrap items-center mt-3 text-sm font-medium text-gray-500 dark:text-gray-400 sm:mt-0">
         <li>
           <a href="https://github.com/SeSAC-1st" class="hover:underline"><img src="/static/image/githubImage.png"
