--- a/views/include/footer.ejs
+++ b/views/include/footer.ejs
@@ -1,18 +1,21 @@
 <div>
-  <footer class="bg-white rounded-lg shadow m-4 dark:bg-gray-800">
-    <div class="w-full mx-auto max-w-screen-xl p-4 md:flex md:items-center justify-around">
-      <div class="text-sm text-gray-500 sm:text-center"> 2024
-        <a class="hover:underline">Design by Blomit</a>
+  <footer class="bg-white rounded-lg shadow m-4">
+    <div class="w-full mx-auto max-w-screen-xl p-4 flex items-center justify-between">
+      <div class="flex items-center space-x-4">
+        <div class="text-sm text-gray-500">
+          2024 <a href="#" class="hover:underline">Design by Blomit</a>
+        </div>
+        <div class="text-sm text-gray-500">Terms</div>
+        <div class="text-sm text-gray-500">Privacy</div>
+        <div class="text-sm text-gray-500">Security</div>
+        <div class="text-sm text-gray-500">Docs</div>
       </div>
-      <div class="text-sm text-gray-500 sm:text-center">Terms</div>
-      <div class="text-sm text-gray-500 sm:text-center">Privacy</div>
-      <div class="text-sm text-gray-500 sm:text-center">Security</div>
-      <div class="text-sm text-gray-500 sm:text-center">Docs</div>
-      <ul class="flex flex-wrap items-center mt-3 text-sm font-medium text-gray-500 dark:text-gray-400 sm:mt-0">
+      <ul class="flex items-center text-sm font-medium text-gray-500">
         <li>
-          <a href="https://github.com/SeSAC-1st" class="hover:underline"><img src="/static/image/githubImage.png"
-              alt="github이미지" width="30px" style="margin-left: 4px" />
-            Github</a>
+          <a href="https://github.com/SeSAC-1st" class="hover:underline flex items-center">
+            <img src="/static/image/githubImage.png" alt="github이미지" width="30px" class="ml-2" />
+            Github
+          </a>
         </li>
       </ul>
     </div>
