--- a/views/posts/postsPage.ejs
+++ b/views/posts/postsPage.ejs
@@ -238,7 +238,7 @@
 
     </style>
 </head>
-<body class="bg-white dark:bg-gray-800">
+<body class="bg-white ">
     <%- include('../include/header.ejs') %>
     <div id="grid-Wrapper"  class="mt-8">
         <div class="flex wrap">
